--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="black"></div>
 
         <div id="blue"></div>
+        <p class="link"> <a  href="task.html">kodutöö</a></p>
     </div>
 
     <div class="footer" >
@@ -25,6 +26,6 @@
             Anatoly K &#169; 2023
         </p>
     </div>
-
+ 
 </body>
 </html>
