--- a/task.html
+++ b/task.html
@@ -41,8 +41,8 @@
 
     <div class="link2">
         
-        <a href=”https://calorizator.ru/recipe/52107”> Original recipe</a>
         <a href="index.html"> CSS playground</a>
+        <a href="http://calorizator.ru/recipe/52107" target="_blank">Original recipe</a>
     
     </div>
 
