--- a/task.html
+++ b/task.html
@@ -46,6 +46,11 @@
     
     </div>
 
+    <div class="nyancat">
+        <div class="nyan-cat"><img src="img/nyan2.png" alt="nyancat" height="150px"></div>
+        <div class="rainbow"></div>
+    </div>
+
     <div class="footer" >
         <p>
             Anatoly K &#169; 2023
