--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div id="blue"></div>
         <p class="link"> <a  href="task.html">kodutöö</a></p>
+        <p class="link"> <a  href="index_2.html">klassitöö2</a></p>
     </div>
 
     <div class="footer" >
